--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- 關於應用程式的資訊 -->
+        <!-- 因為使用對話框的樣式，所以不用設定標題 -->
+        <activity android:name=".AboutActivity"
+            android:theme="@android:style/Theme.Dialog"/>
+        <!-- 記事項目元件 -->
+        <activity android:name=".ItemActivity">
+            <intent-filter>
+            <!-- 新增用的名稱 -->
+            <action android:name="com.greed.ging.note.ADD_ITEM"/>
+            <!-- 修改用的名稱 -->
+            <action android:name="com.greed.ging.note.EDIT_ITEM"/>
+            <!-- 一定要加入，內容固定不變 -->
+            <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
