--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
@@ -19,19 +18,24 @@
 
         <!-- 關於應用程式的資訊 -->
         <!-- 因為使用對話框的樣式，所以不用設定標題 -->
-        <activity android:name=".AboutActivity"
-            android:theme="@android:style/Theme.Dialog"/>
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@android:style/Theme.Dialog" />
         <!-- 記事項目元件 -->
         <activity android:name=".ItemActivity">
             <intent-filter>
-            <!-- 新增用的名稱 -->
-            <action android:name="com.greed.ging.note.ADD_ITEM"/>
-            <!-- 修改用的名稱 -->
-            <action android:name="com.greed.ging.note.EDIT_ITEM"/>
-            <!-- 一定要加入，內容固定不變 -->
-            <category android:name="android.intent.category.DEFAULT" />
+
+                <!-- 新增用的名稱 -->
+                <action android:name="com.greed.ging.note.ADD_ITEM" />
+                <!-- 修改用的名稱 -->
+                <action android:name="com.greed.ging.note.EDIT_ITEM" />
+                <!-- 一定要加入，內容固定不變 -->
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".ColorActivity"
+            android:theme="@android:style/Theme.Dialog" />
     </application>
 
 </manifest>
