顏色選擇，尚有問題

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,17 @@
         </activity>
         <activity
             android:name=".ColorActivity"
-            android:theme="@android:style/Theme.Dialog" />
+            android:theme="@android:style/Theme.Dialog">
+        <!-- 加入設定元件啟動用的Action名稱 -->
+        <intent-filter>
+            <action android:name="net.macdidi.myandroidtutorial.CHOOSE_COLOR"/>
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+    </activity>
+
+        <!-- 設定元件 -->
+        <activity
+            android:name=".PrefActivity" />
     </application>
 
 </manifest>
