--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,12 +33,14 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+
+        <!-- 選擇顏色 -->
         <activity
             android:name=".ColorActivity"
             android:theme="@android:style/Theme.Dialog">
         <!-- 加入設定元件啟動用的Action名稱 -->
         <intent-filter>
-            <action android:name="net.macdidi.myandroidtutorial.CHOOSE_COLOR"/>
+            <action android:name="com.greed.ging.note.CHOOSE_COLOR"/>
             <category android:name="android.intent.category.DEFAULT" />
         </intent-filter>
     </activity>
